--- a/style/main.scss
+++ b/style/main.scss
@@ -164,6 +164,10 @@ h1.title {
   content: "Best"
 }
 
+.current-value-container {}
+
+.best-value-container {}
+
 p {
   margin-top: 0;
   margin-bottom: 10px;
@@ -544,6 +548,20 @@ hr {
 }
 
 .restart-button {
+  @include button;
+  display: block;
+  text-align: center;
+  float: right;
+}
+
+.move-button {
+  @include button;
+  display: block;
+  text-align: center;
+  float: left;
+}
+
+.autoplay-button {
   @include button;
   display: block;
   text-align: center;
